<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_text">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white_text">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/white_text">

            <Button
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:textStyle="bold"
                android:text="@string/sign_up"
                android:textColor="@color/button_color"
                android:textSize="@dimen/sign_up"
                />


            <ImageView
                android:id="@+id/signin_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/elizadeuniversitylogo"
                android:layout_centerHorizontal="true"
                android:elevation="8dp"/>


        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <android.support.design.widget.TextInputLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_parent">

                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/matric_text"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/color_black" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_parent"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_parent">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/signup_password"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textVisiblePassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/color_black" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_parent"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:text="@string/login_text"
                android:layout_marginRight="10dp"
                android:textColor="@color/button_color"
                android:textSize="@dimen/btn_ts"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/lecturer_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_colors"
                android:text="@string/lecturer_text"
                android:layout_marginRight="50dp"
                android:textColor="@color/white_text"
                android:textSize="@dimen/lecturer_login"
                android:layout_below="@id/btn_login"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:textStyle="bold"/>
        </RelativeLayout>


        <Button
            android:id="@+id/password_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/button_colors" />



    </LinearLayout>


</LinearLayout>