<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_text">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white_text">

        <!--<android.support.v7.widget.CardView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:cardElevation="@dimen/card_elevation"-->
            <!--android:layout_margin="8dp"-->
            <!--android:layout_marginBottom="10dp">-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white_text">




                <ImageView
                    android:id="@+id/lecturer_signin_image"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:src="@drawable/elizadeuniversitylogo"
                    android:layout_centerHorizontal="true"
                    android:elevation="8dp" />


            </RelativeLayout>
        <!--</android.support.v7.widget.CardView>-->

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            android:background="@color/color_white"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <android.support.design.widget.TextInputLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_parent">

                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_text"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/color_black" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_parent"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_parent">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/signup_password"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textVisiblePassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/color_black" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_colors"
                android:text="@string/login_text"
                android:layout_marginRight="80dp"
                android:textColor="@color/white_text"
                android:textSize="@dimen/btn_ts"
                android:layout_below="@id/password_parent"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="80dp"
                android:textStyle="bold"/>
        </RelativeLayout>


        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/dont_have_account"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/button_colors"
            android:textSize="17dp" />

        <Button
            android:id="@+id/password_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@null"
            android:text="@string/forgot_password_test"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/button_colors"
            android:textSize="17dp" />


    </LinearLayout>


</LinearLayout>