<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">


    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/splash_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/elizadeuniversitylogo"
                android:layout_margin="10dp"/>




        </RelativeLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <!--<TextView-->
            <!--android:id="@+id/password_question_tv"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:padding="5dp"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:text="@string/forgot_password_test"-->
            <!--android:textColor="@color/colorPrimaryDark"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:textSize="20dp" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin_tv"
            android:text="@string/forgot_password_message"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp" />
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/emails_text"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:background="@color/button_color"
            android:text="@string/forgot_password_retest"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/back_button"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_arrow_back_black_24dp"/>

    </LinearLayout>

    </LinearLayout>

